test/types/type_variables/deitz/part7/construct-1b.good
construct-1b.chpl:6: error: invalid type specifier 'R(t=type real(64), x="deitz was here")'
construct-1b.chpl:6: note: type specifier did not match: R(type t)
construct-1b.chpl:6: note: type was specified with 2 arguments
construct-1b.chpl:1: note: but type 'R' only has 1 generic field
